REGRESSION(r224887): GCC 5 build broken https://bugs.webkit.org/show_bug.cgi?id=179750

Reviewed by Jer Noble.

Add a legacy FourCC constructor that will be used only when building with GCC 5. This is
bad, but it seems acceptable for use with a fallback codepath.

Unfortunately, this requires adjusting some initializations to avoid ambiguity with the
uint32_t constructor.

* platform/graphics/FourCC.h:
(WebCore::FourCC::FourCC):
* platform/graphics/iso/ISOBox.cpp:
(WebCore::ISOBox::peekBox):
* platform/graphics/iso/ISOBox.h:
* platform/graphics/iso/ISOOriginalFormatBox.h:
* platform/graphics/iso/ISOSchemeTypeBox.h:


Canonical link: https://commits.webkit.org/195813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224937 268f45cc-cd09-0410-ab3c-d52691b4dbfc